# enginimus

./: CMakeLists.txt
include/enginimus/: camera.hpp  enginimus.h  entity.hpp  entity_manager.hpp  free_look_camera.hpp  input_system.hpp  mesh.hpp  model.hpp  render_component.hpp  render_system.h  shader.h  structures.hpp  util.hpp
include/enginimus/component/: base_component.hpp  component.hpp  component_manager.hpp  component_types.hpp  render_component.hpp  transform_component.hpp
include/enginimus/entity/: entity.hpp  entity_manager.hpp
include/enginimus/event/: base_event.hpp  event.hpp  event_dispatch.hpp  event_listener.hpp
include/enginimus/events/: camera_events.hpp
include/enginimus/input/: input.hpp  input_context.hpp  input_system.hpp
include/enginimus/render/: free_look_camera.hpp  mesh.hpp  model_loader.hpp  render_component.hpp  render_system.h  structures.hpp
shaders/: default.frag  default.vert
src/: input_system.cpp  main.cpp  mesh.cpp  model.cpp  render_component.cpp  render_system.cpp  util.cpp
src/component/: base_component.cpp  render_component.cpp  transform_component.cpp
src/entity/: entity.cpp
src/event/: base_event.cpp
src/input/: input_context.cpp  input_system.cpp
src/render/: mesh.cpp  model_loader.cpp  render_component.cpp  render_system.cpp
test/: Test.cpp
